# tr

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: build.yml  c-cpp.yml
main/: CMakeLists.txt  app_main.cpp  idf_component.yml
